--- a/apps/templates/home/order_req_detail.html
+++ b/apps/templates/home/order_req_detail.html
@@ -25,10 +25,10 @@
                 <p class="text-lg mb-1 pt-2 text-bold"> <i class="far fa-calendar-alt me-2"></i> <small> {{ req.date_created|date:'H:i  Y-m-d' }} </small> </p>
                 <h3 dir="rtl" class="font-weight-bolder">
                   {{ req }}
-                  <a class="btn btn-link text-dark px-3 mb-0 text-secondary text-xxs" href="javascript:;"><i class="fas fa-pencil-alt text-dark me-2" aria-hidden="true"></i> ویرایش </a>
+                  <a class="btn btn-link text-dark px-3 mb-0 text-secondary text-xxs" href="{{ req.get_absolute_edit_url }}"><i class="fas fa-pencil-alt text-dark me-2" aria-hidden="true"></i> ویرایش </a>
                 </h3>
-                <div class="ms-auto">
-                  <p dir="rtl"> {{ req.description|linebreaks }} </p>
+                <div class="ms-auto" align="right" dir="rtl">
+                   {{ req.description|linebreaks }}
                 </div>
               </div>
             </div>
