just tagform edit

--- a/apps/templates/home/customer_detail.html
+++ b/apps/templates/home/customer_detail.html
@@ -65,6 +65,7 @@
               </tr>
             </tbody>
           </table>
+          <a class="btn btn-link text-dark px-3 mb-0 text-secondary text-xxs" href="{{ customer.get_absolute_edit_url }}"><i class="fas fa-pencil-alt text-dark me-2" aria-hidden="true"></i> ویرایش </a>
           </div>
         </div>
       </div>
