--- a/apps/templates/home/order_registration.html
+++ b/apps/templates/home/order_registration.html
@@ -82,7 +82,7 @@
 
                  <div class="card-footer" align="center">
                    <button type="submit" class="btn bg-gradient-info my-1 me-1"> ثبت </button>
-                   <p style="color:green;"> {{ success }} </p>
+                   <a href="{{ link.get_absolute_url }}"> <p style="color:green;"> {{ success }} </p> </a>
                  </div>
 
               </form>
