--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -15,11 +15,16 @@
                 </div>
               </a>
             </li>
+           {% if request.user.is_superuser %}
             <li class="nav-item px-4 d-flex align-items-center">
               <a href="{% url 'admin:index' %}" class="nav-link text-body p-0">
                 <i class="fa fa-cog fixed-plugin-button-nav cursor-pointer"></i>
               </a>
             </li>
+           {% endif %}
+
+
+
             <li class="nav-item dropdown pe-2 d-flex align-items-center">
               <a href="javascript:;" class="nav-link text-body p-0" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
                 <i class="fa fa-bell cursor-pointer"></i>
@@ -93,6 +98,10 @@
                 </li>
               </ul>
             </li>
+
+
+
+            
           </ul>
         </div>
 
