change user name

--- a/apps/templates/home/customer_detail.html
+++ b/apps/templates/home/customer_detail.html
@@ -133,7 +133,7 @@
                         {% endif %}
                       </td>
                       <td class="align-middle text-center">
-                        <p class="text-xs text-secondary mb-0"> {{ Order_request.user }} </p>
+                        <p class="text-xs text-secondary mb-0"> {{ Order_request.user.first_name }} {{ Order_request.user.last_name }} </p>
                       </td>
                       <td class="align-middle text-center">
                         <p class="text-xs text-secondary mb-0"> {{ Order_request.date_created|date:'H:i  Y-m-d'  }} </p>
