--- a/apps/templates/home/order_req_detail.html
+++ b/apps/templates/home/order_req_detail.html
@@ -27,8 +27,9 @@
                   {{ req }}
                   <a class="btn btn-link text-dark px-3 mb-0 text-secondary text-xxs" href="{{ req.get_absolute_edit_url }}"><i class="fas fa-pencil-alt text-dark me-2" aria-hidden="true"></i> ویرایش </a>
                 </h3>
-                <div class="ms-auto" align="right" dir="rtl">
-                   {{ req.description|linebreaks }}
+                <div align="right" dir="rtl">
+                  <p> <span class="text-xs text-secondary mb-0"> کارشناس فروش : </span> {{ req.user.first_name }} {{ req.user.last_name }} </p>
+                  {{ req.description|linebreaks }}
                 </div>
               </div>
             </div>
@@ -111,8 +112,7 @@
                   </div>
 
                   <div class="col-lg-6" dir="ltr">
-                    <p> <span class="text-xs text-secondary mb-0"> کارشناس فروش : </span> {{ req.user }} </p>
-                    <p class="text-xs text-secondary mb-0"> وضعیت:
+                    <p class="text-xs text-secondary mb-0">
                       {% if req.status == 'تکمیل شده' %}
                         <span class="badge badge-sm bg-gradient-success"> تکمیل شده </span>
                       {% elif req.status == 'لغو شده' %}
