--- a/apps/templates/home/order_requests.html
+++ b/apps/templates/home/order_requests.html
@@ -72,7 +72,7 @@
                     </td>
 
                     <td class="align-middle text-center">
-                      <p class="text-xs text-secondary mb-0"> {{ Order_request.user }} </p>
+                      <p class="text-xs text-secondary mb-0"> {{ Order_request.user.first_name }} {{ Order_request.user.last_name }} </p>
                     </td>
 
                     <td class="align-middle text-center">
