--- a/apps/templates/includes/footer-fullscreen.html
+++ b/apps/templates/includes/footer-fullscreen.html
@@ -3,15 +3,13 @@
       <div class="row align-items-center justify-content-lg-between">
         <div class="col-lg-6 mb-lg-0 mb-4">
           <div class="copyright text-center text-sm text-muted text-lg-left">
-            &copy;
-            <a href="https://bit.ly/3fKQZaL" class="font-weight-bold" target="_blank">2021</a>
-            -  <a target="_blank" href="https://Atrotech.ir">Atrotech</a>.
+            &copy;  2021 -  <a target="_blank" href="http://www.atrotech.ir/">Atrotech</a>.
           </div>
         </div>
         <div class="col-lg-6">
           <ul class="nav nav-footer justify-content-center justify-content-lg-end">
             <li class="nav-item">
-              <a href="https://appseed.us/product/django-soft-ui-dashboard"
+              <a href="http://www.atrotech.ir/"
                  class="nav-link text-muted" target="_blank"> افق سازان فناوری آترو ( آتـــروتـک ) </a>
             </li>
           </ul>
