--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -35,7 +35,7 @@
               <ul class="dropdown-menu px-2 py-3 ms-sm-n4" aria-labelledby="dropdownMenuButton">
                {% for Order_request in new_reqs %}
                 <li class="mb-2">
-                  <a class="dropdown-item border-radius-md" href="javascript:;">
+                  <a class="dropdown-item border-radius-md" href="{{ Order_request.get_absolute_url }}">
                     <div class="d-flex py-1">
                       <div class="my-auto">
                         <img src="{{ Order_request.product.image.url }}" class="avatar avatar-sm  me-3 ">
