--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -170,7 +170,7 @@
         labels: ["۹ ماه پیش", "۸ ماه پیش", "۷ ماه پیش", "۶ ماه پیش", "۵ ماه پیش", "۴ ماه پیش", "۳ ماه پیش", "۲ ماه پیش", "۱ ماه پیش"],
         datasets: [
          {
-            label: "Mobile apps",
+            label: "tampo",
             tension: 0.4,
             borderWidth: 0,
             pointRadius: 0,
@@ -182,7 +182,7 @@
 
           },
           {
-            label: "Websites",
+            label: "crm",
             tension: 0.4,
             borderWidth: 0,
             pointRadius: 0,
@@ -194,7 +194,7 @@
 
           },
           {
-            label: "tampo",
+            label: "others",
             tension: 0.4,
             borderWidth: 0,
             pointRadius: 0,
