--- a/apps/templates/home/order_registration.html
+++ b/apps/templates/home/order_registration.html
@@ -57,14 +57,14 @@
                   <div class="col-md-2 pr-md-4">
                     <div class="form-group">
                       <label><p class="text-xs text-secondary mb-0"> تعداد </p></label>
-                      <input name="qty" type="number" value="1" class="form-control">
+                      <input name="qty" type="number" value="1" class="form-control" required>
                     </div>
                   </div>
 
                    <div class="col-md-2 pl-md-4">
                      <div class="form-group">
                        <label><p class="text-xs text-secondary mb-0"> درصد تخفیف </p></label>
-                       <input name="discount" type="number" value="0" class="form-control">
+                       <input name="discount" type="number" value="0" class="form-control" required>
                      </div>
                    </div>
 
