--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -149,6 +149,8 @@
   <script>
 
 
+
+
     var ctx2 = document.getElementById("chart-line").getContext("2d");
 
     var gradientStroke1 = ctx2.createLinearGradient(0, 230, 0, 50);
@@ -268,5 +270,52 @@
       Scrollbar.init(document.querySelector('#sidenav-scrollbar'), options);
     }
   </script>
+
+
+
+
+
+
+
+
+  <script>
+
+    var chartdata = {{ chartdata|safe} };
+
+/*       var input_data = [
+           {% for Data in chart_data %}
+            { product:'{{ Data.product }}', qty:{{ Data.qty }} },
+           {% endfor %}
+        ];
+
+        console.log(input_data);
+
+
+
+        console.log('---------------------------');
+
+
+
+        var conclusion_data = exitorders.reduce(function (agg, obj) {
+          var objForCode = agg.filter(function (codeObj) { return codeObj.product === obj.product})[0]
+
+          if (objForCode) {
+            objForCode.totalQty += obj.qty;
+          } else {
+            agg.push({
+              product: obj.product,
+              totalQty: obj.qty
+            })
+          }
+          return agg;
+        }, [])
+
+        console.log(conclusion_data);
+
+*/
+  </script>
+
+
+
 
 {% endblock javascripts %}
