--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -119,7 +119,7 @@
               <h6> بررسی اجمالی فروش </h6>
               <p class="text-sm">
                 <i class="fa fa-arrow-up text-success"></i>
-                <span class="font-weight-bold"> نمودار فروش یک سال اخیر </span>
+                <span class="font-weight-bold"> نمودار فروش ۹ ماه اخیر </span>
               </p>
             </div>
             <div class="card-body p-3" dir="rtl">
