--- a/apps/templates/home/order_req_detail.html
+++ b/apps/templates/home/order_req_detail.html
@@ -103,7 +103,7 @@
                         پیش فاکتور
                         <i class="fas fa-arrow-right text-sm ms-1" aria-hidden="true"></i>
                       </a>
-                      <a class="text-info text-sm font-weight-bold mb-0 icon-move-right mt-auto" href="javascript:;">
+                      <a class="text-info text-sm font-weight-bold mb-0 icon-move-right mt-auto" href="{{ req.get_absolute_invoice_url }}">
                         فاکتور
                         <i class="fas fa-arrow-right text-sm ms-1" aria-hidden="true"></i>
                       </a>
