--- a/apps/templates/home/order_req_detail.html
+++ b/apps/templates/home/order_req_detail.html
@@ -99,7 +99,7 @@
                 <div class="row">
                   <div class="col-lg-6">
                     <div class="card-body position-relative z-index-1 d-flex flex-column h-100 p-3">
-                      <a class="text-info text-sm font-weight-bold mb-0 icon-move-right mt-auto" href="javascript:;">
+                      <a class="text-info text-sm font-weight-bold mb-0 icon-move-right mt-auto" href="{{ req.get_absolute_pre_invoice_url }}">
                         پیش فاکتور
                         <i class="fas fa-arrow-right text-sm ms-1" aria-hidden="true"></i>
                       </a>
