--- a/apps/templates/home/invoice.html
+++ b/apps/templates/home/invoice.html
@@ -6,7 +6,7 @@
   <title> صورت حساب </title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
   <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
-  <link rel="stylesheet" href="./style.css">
+  <link href="/static/assets/css/invoice.css" rel="stylesheet" />
 
 </head>
 <body>
